--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="border rounded-xl overflow-hidden shadow hover:shadow-lg transition">
         <a href="album/ipa1.html">
-          <img src="images/ipa1/foto1.jpg" alt="Kelas 12 IPA1" class="w-full h-48 object-cover" />
+          <img src="images/ipa1/foto1.jpg" alt="Kelas 12 F3" class="w-full h-48 object-cover" />
           <div class="p-4">
             <h2 class="text-xl font-semibold">Brunggas Moment</h2>
             <p class="text-sm text-gray-600">Kenangan manis bersama Brunggas.</p>
@@ -51,8 +51,19 @@
           </div>
         </a>
       </div>
-
+      </div>
     </div>
-  </div>
+  </main>
+  <footer class="text-center text-sm text-gray-500 mt-10 mb-4">
+    &copy; 2025 Brunggas Moment
+  </footer>
+  <!-- Tombol WhatsApp -->
+  <a href="https://wa.me/6283841106098?text=Halo%20saya%20ingin%20bertanya%20tentang%20foto%20kenangan"
+     class="fixed bottom-4 right-4 bg-green-500 hover:bg-green-600 text-white p-3 rounded-full shadow-lg z-50 transition"
+     target="_blank" title="Hubungi via WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="white" viewBox="0 0 24 24">
+      <path d="M20.52 3.48A11.83 11.83 0 0012 0C5.37 0 0 5.37 0 12a11.88 11.88 0 001.61 5.92L0 24l6.27-1.65A11.88 11.88 0 0012 24c6.63 0 12-5.37 12-12 0-3.18-1.23-6.17-3.48-8.52zM12 22c-1.64 0-3.25-.39-4.7-1.13l-.34-.17-3.72.98 1-3.62-.22-.37A9.97 9.97 0 012 12c0-5.52 4.48-10 10-10s10 4.48 10 10-4.48 10-10 10zm5.18-7.82c-.28-.14-1.63-.8-1.88-.89s-.44-.14-.62.14-.72.88-.88 1.06-.33.21-.61.07c-.28-.14-1.19-.44-2.27-1.42-.84-.75-1.41-1.68-1.58-1.96-.17-.28-.02-.43.13-.57.13-.13.28-.33.42-.5.14-.17.19-.28.28-.47.09-.19.05-.35-.02-.5-.07-.14-.61-1.47-.84-2.02-.22-.52-.45-.45-.62-.45s-.34-.02-.53-.02-.5.07-.76.35c-.26.28-1 1-1 2.44s1.02 2.83 1.16 3.03c.14.19 2 3.06 4.84 4.29.68.29 1.21.46 1.63.58.68.22 1.3.19 1.79.12.55-.08 1.63-.66 1.86-1.3.23-.63.23-1.17.16-1.3-.07-.13-.25-.2-.53-.35z"/>
+    </svg>
+  </a>
 </body>
 </html>
