--- a/album/ipa1.html
+++ b/album/ipa1.html
@@ -15,6 +15,15 @@
       <img src="../images/ipa1/foto1.jpg" alt="foto1.jpg" class="rounded-lg shadow" />
       <img src="../images/ipa1/foto2.jpg" alt="foto2.jpg" class="rounded-lg shadow" />
       <img src="../images/ipa1/foto3.jpg" alt="foto3.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto4.jpg" alt="foto4.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto5.jpg" alt="foto5.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto6.jpg" alt="foto6.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto7.jpg" alt="foto7.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto8.jpg" alt="foto8.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto9.jpg" alt="foto9.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto10.jpg" alt="foto10.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto11.jpg" alt="foto11.jpg" class="rounded-lg shadow" />
+      <img src="../images/ipa1/foto12.jpg" alt="foto12.jpg" class="rounded-lg shadow" />
     </div>
 
     <div id="disqus_thread"></div>
