--- a/album/ips1.html
+++ b/album/ips1.html
@@ -14,6 +14,18 @@
     <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 mb-10">
       <img src="../images/ips1/foto1.jpg" alt="foto1.jpg" class="rounded-lg shadow" />
       <img src="../images/ips1/foto2.jpg" alt="foto2.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto3.jpg" alt="foto3.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto4.jpg" alt="foto4.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto5.jpg" alt="foto5.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto6.jpg" alt="foto6.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto7.jpg" alt="foto7.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto8.jpg" alt="foto8.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto9.jpg" alt="foto9.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto10.jpg" alt="foto10.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto11.jpg" alt="foto11.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto12.jpg" alt="foto12.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto13.jpg" alt="foto13.jpg" class="rounded-lg shadow" />
+      <img src="../images/ips1/foto14.jpg" alt="foto14.jpg" class="rounded-lg shadow" />
     </div>
 
     <div id="disqus_thread"></div>
